--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".UI.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -12,45 +12,142 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/background_categories"
-            android:elevation="10dp"
-            android:layout_margin="10dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/background_categories"
+                android:elevation="10dp"
+                android:layout_margin="10dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Most Popular Movies"
-                    android:id="@+id/tv_most_popular"
-                    android:gravity="center"
-                    android:textSize="25sp"
-                    android:padding="5dp"/>
-
-
-                <TextView
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/tv_most_popular"
-                    android:textColor="#0000ff"
-                    android:text="SEE ALL"
-                    android:gravity="center"
-                    android:textSize="15sp"
-                    android:layout_marginTop="10dp"/>
+                    android:layout_height="wrap_content">
 
-            </RelativeLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Most Popular Movies"
+                        android:id="@+id/tv_most_popular"
+                        android:gravity="center"
+                        android:textSize="25sp"
+                        android:padding="5dp"/>
 
-            <android.support.v7.widget.RecyclerView
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/tv_most_popular"
+                        android:textColor="#0000ff"
+                        android:text="SEE ALL"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tv_sa_most_pop"/>
+
+                </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:id="@+id/recycler_most_popular"
+                    android:padding="10dp"
+                    app:stackFromEnd="true"
+                    app:reverseLayout="true"/>
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:id="@+id/recycler_most_popular"
-                android:padding="10dp"/>
-        </LinearLayout>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/background_categories"
+                android:elevation="10dp"
+                android:layout_margin="10dp">
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="230dp"
+                        android:layout_height="wrap_content"
+                        android:text="In Theaters"
+                        android:id="@+id/tv_in_theaters"
+                        android:textSize="25sp"
+                        android:padding="5dp"/>
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/tv_in_theaters"
+                        android:textColor="#0000ff"
+                        android:text="SEE ALL"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tv_sa_in_theatre"/>
+
+                </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_in_theatre"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:padding="10dp"
+                    app:reverseLayout="true"
+                    app:stackFromEnd="true" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/background_categories"
+                android:elevation="10dp"
+                android:layout_margin="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="230dp"
+                        android:layout_height="wrap_content"
+                        android:text="Comming Soon"
+                        android:id="@+id/tv_coming_soon"
+                        android:textSize="25sp"
+                        android:padding="5dp"/>
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@+id/tv_coming_soon"
+                        android:textColor="#0000ff"
+                        android:text="SEE ALL"
+                        android:gravity="center"
+                        android:textSize="15sp"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/tv_sa_coming_soon"/>
+
+                </RelativeLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_coming_soon"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:padding="10dp"
+                    app:reverseLayout="true"
+                    app:stackFromEnd="true" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </ScrollView>
 
