--- a/app/src/main/res/layout/list_coming_soon.xml
+++ b/app/src/main/res/layout/list_coming_soon.xml
@@ -11,17 +11,19 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:id="@+id/img_poster"
+        android:id="@+id/img_cs_poster"
         android:layout_marginTop="3dp"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:gravity="center"
         android:text="movie Name"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:textSize="20sp"
         android:textColor="#000000"
-        android:id="@+id/tv_movie_name"/>
+        android:id="@+id/tv_cs_movie_name"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -30,7 +32,9 @@
         android:text="1"
         android:textSize="20sp"
         android:textColor="#ff00"
-        android:id="@+id/tv_rank"
-        android:visibility="gone"/>
+        android:id="@+id/tv_cs_rel_date" />
+
+
+
 
 </LinearLayout>
