--- a/app/src/main/res/layout/list_coming_soon.xml
+++ b/app/src/main/res/layout/list_coming_soon.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
-    android:layout_height="250dp"
+    android:layout_height="260dp"
     android:orientation="vertical"
     android:elevation="10dp"
     android:background="@drawable/background_categories"
@@ -13,7 +13,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/img_cs_poster"
-        android:layout_marginTop="3dp"/>
+        android:scaleType="fitXY"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -24,11 +24,13 @@
         android:ellipsize="end"
         android:textSize="20sp"
         android:textColor="#000000"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:id="@+id/tv_cs_movie_name"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="1"
         android:textSize="20sp"
