--- a/app/src/main/res/layout/list_in_theatre.xml
+++ b/app/src/main/res/layout/list_in_theatre.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
-    android:layout_height="250dp"
+    android:layout_height="260dp"
     android:orientation="vertical"
     android:elevation="10dp"
     android:background="@drawable/background_categories"
@@ -13,7 +13,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/img_it_poster"
-        android:layout_marginTop="3dp"/>
+        android:scaleType="fitXY"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -24,19 +24,20 @@
         android:ellipsize="end"
         android:textSize="20sp"
         android:textColor="#000000"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
         android:id="@+id/tv_it_movie_name"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_star"
-            android:id="@+id/img_ic_star"
-            android:padding="5dp"/>
+            android:id="@+id/img_ic_star"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -45,8 +46,8 @@
             android:text="1.6/10"
             android:textSize="20sp"
             android:gravity="center"
-            android:padding="5dp"
-            android:id="@+id/tv_it_rating"/>
+            android:id="@+id/tv_it_rating"
+            android:paddingLeft="5dp"/>
     </RelativeLayout>
 
 </LinearLayout>
