--- a/app/src/main/res/layout/list_most_popular.xml
+++ b/app/src/main/res/layout/list_most_popular.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="150dp"
-    android:layout_height="250dp"
+    android:layout_height="215dp"
     android:orientation="vertical"
     android:elevation="10dp"
     android:background="@drawable/background_categories"
@@ -13,16 +13,20 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/img_poster"
-        android:layout_marginTop="3dp"/>
+        android:scaleType="fitXY"/>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:text="movie Name"
         android:textSize="20sp"
         android:textColor="#000000"
-        android:id="@+id/tv_movie_name"/>
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
+        android:id="@+id/tv_movie_name"
+        android:maxLines="2"
+        android:ellipsize="end"/>
 
     <TextView
         android:layout_width="match_parent"
