--- a/app/src/main/res/layout/list_cast.xml
+++ b/app/src/main/res/layout/list_cast.xml
@@ -21,13 +21,19 @@
         android:gravity="center"
         android:id="@+id/tv_md_cast"
         android:textColor="@color/colorBlack"
-        android:textSize="15sp"/>
+        android:textSize="15sp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:id="@+id/tv_md_char"
-        android:text="bjhdjsbjdbf"/>
+        android:text="bjhdjsbjdbf"
+        android:maxLines="3"
+        android:ellipsize="end"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"/>
 
 </LinearLayout>
