--- a/app/src/main/res/layout/list_movies.xml
+++ b/app/src/main/res/layout/list_movies.xml
@@ -28,7 +28,9 @@
             android:paddingLeft="10dp"
             android:text="kjsdkjfjsf"
             android:id="@+id/tv_ml_title"
-            android:textColor="@color/colorBlack"/>
+            android:textColor="@color/colorBlack"
+            android:maxLines="2"
+            android:ellipsize="end"/>
 
         <LinearLayout
             android:layout_width="match_parent"
