--- a/app/src/main/res/menu/menu_sort.xml
+++ b/app/src/main/res/menu/menu_sort.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/normal"
+        android:enabled="true"
+        android:title="Default"
+        app:showAsAction="never" />
+
     <item
         android:id="@+id/name"
         android:enabled="true"
